# quant-infra

./: .mypy.ini  .ruff.toml  DEVELOPMENT_PLAN.md  README.md  debug_backtest.py  debug_strategy.py  main.py  pyproject.toml  test_strategy.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: format.yml  test.yml
examples/: backtest_comprehensive.py  fetch_data.py  simple_backtest.py
src/quant_infra/: __init__.py
src/quant_infra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/quant_infra/backtesting/: __init__.py  engine.py
src/quant_infra/data/: __init__.py  cache.py  loader.py  pipeline.py  transform.py
src/quant_infra/risk/: managers.py
src/quant_infra/utils/: position_sizing.py
tests/: test_backtesting.py  test_data_loader.py
